k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api
  namespace: events

spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000

  selector:
    name: api-pod
    app: api-app

  type: ClusterIP
---

apiVersion: v1
kind: Service

metadata:
  name: api
  namespace: events

spec:
  selector:
    name: api-pod
    app: api-app

  type: ClusterIP
---

apiVersion: v1
kind: Service

metadata:
  name: rabbitmq
  namespace: events

spec:
  ports:
  - protocol: TCP
    port: 5672
    targetPort: 5672
  - protocol: TCP
    port: 15672
    targetPort: 15672

  selector:
    name: rabbitmq-pod
    app: rabbitmq-app

  type: ClusterIP
