k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: events
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.events-test.com # chenge_me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  namespace: events
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: queue.events-test.com # chenge_me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
